--- a/backend/package.json
+++ b/backend/package.json
@@ -16,9 +16,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jimp": "^0.22.10",
     "jsonwebtoken": "^9.0.2",
+    "jsqr": "^1.4.0",
     "multer": "^1.4.5-lts.2",
-    "mysql2": "^3.13.0"
+    "mysql2": "^3.13.0",
+    "promptpay-qr": "^0.5.0",
+    "qrcode": "^1.5.4",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "@ljharb/tsconfig": "^0.3.2",
@@ -27,6 +32,8 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.9",
+    "@types/qrcode": "^1.5.5",
+    "@types/tesseract.js": "^0.0.2",
     "prisma": "^6.5.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
