--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "lucide-react": "^0.511.0",
     "mini.css": "^3.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^6.30.0",
     "react-scripts": "^5.0.1",
